upgrade project to use java 17 AND add How to run section in README.md